CSSが反映されるようにindex.htmlを編集しました！

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>quizy1</title>
     <link
         href="https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/html5resetcss/html5reset-1.6.css">
-        <link rel="stylesheet" href="./quizy1.css">
+        <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
